test/valid/fc66494_factorial/factorial.mag
-- Author: 66494, Tiago Silva

fun fact (n) : Int -> Int =
    if n == 0 then 1 else n * fact(n - 1)

fun main (_) : Unit -> Unit =
    print(fact(5))